--- a/src/index.html
+++ b/src/index.html
@@ -16,5 +16,6 @@
       <li><a href="02-video.html">Video playback</a></li>
       <li><a href="03-feedback.html">Feedback form</a></li>
     </ul>
+    <script type="module" src="./js/index.js"></script>
   </body>
 </html>
