--- a/src/index.html
+++ b/src/index.html
@@ -9,12 +9,8 @@
   </head>
   <body>
     <ul>
-      <li><a href="01-page.html">page 1</a></li>
-      <li><a href="02-page.html">page 2</a></li>
-      <li><a href="03-page.html">page 3</a></li>
-      <li><a href="01-gallery.html">Image gallery</a></li>
-      <li><a href="02-video.html">Video playback</a></li>
-      <li><a href="03-feedback.html">Feedback form</a></li>
+      <li><a href="favorite.html">Favorite</a></li>
+      <li><a href="checkout.html">Checkout</a></li>
     </ul>
     <script type="module" src="./js/index.js"></script>
   </body>
