--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <ul>
-      <h1>InterMag!!!</h1>
+      <h1>InterMag</h1>
       <li><a href="favorite.html">Favorite</a></li>
       <li><a href="checkout.html">Checkout</a></li>
     </ul>
